# ML_surface-drifters

./: .gitignore  LICENSE  Makefile  README.md  environment.yml  pyproject.toml
ml_driven_drifter_data_analysis/: __init__.py  config.py  dataset.py  drifter_measurements_error.py  features.py  flipping_index.py  initialise_drifter_data.py  plots.py  plots_obsolete.py  preprocessing.py  preprocessing_drifter_data.py  processing_drifter_data.py  retrieveCopernicus.py  spectral_analysis_drifter_data.py
ml_driven_drifter_data_analysis/Plotting/: domain_figures.py  flipping_index.py
ml_driven_drifter_data_analysis/modeling/: ALE.py  PFI.py  RandomFores_FI_tests.py  RandomForest.py  RandomForest_tests.py  SVR.py  decomposing_currents.py  linear_regression.py  model_agnostics.py  plots_ALE_poster.py  predict.py  predict_RFtwostep.py  predict_tests.py  prediction_LR_tests.py  sigmoid_prediction.py  statistics_prediction.py  train.py
ml_driven_drifter_data_analysis/modeling/fitting_models/: RandomFores_FI_fit.py  RandomForest.py  RandomForest_tests.py  SVR.py  linear_regression.py
ml_driven_drifter_data_analysis/modeling/model_agnostics/: ALE_plots.py  (+4 more)
ml_driven_drifter_data_analysis/supplementary_material/: autocorrelation_times.py  drifter_measurements_error.py  sensitivity_flipping_index.py
references/: autocorrelation_Residual.csv  autocorrelation_Total.csv  drifters_id.csv  drifters_info.csv  variables_labels.csv  variables_labels_FI.csv  variables_labels_residual.csv  variables_labels_residual_FI.csv  waves_dataset.csv
reports/: animation.py  domain_figures.py
(+14 files in other folders)
