[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "ml_driven_drifter_data_analysis"
version = "0.0.1"
description = "Characterisation of ocean surface dynamics by analysing the trajectories of surface drifters using a data-driven approach"
authors = [
  { name = "Jimena Medina Rubio" },
]
license = { file = "LICENSE" }
readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License"
]
requires-python = "~=3.12"

[tool.black]
line-length = 99
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.venv
)/
'''

[tool.ruff.lint.isort]
known_first_party = ["ml_driven_drifter_data_analysis"]
force_sort_within_sections = true
